--- a/NGitLab/NGitLab.Tests/NGitLab.Tests.csproj
+++ b/NGitLab/NGitLab.Tests/NGitLab.Tests.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ProjectsTests.cs" />
     <Compile Include="RepositoryClient\BranchClientTests.cs" />
     <Compile Include="RepositoryClient\FilesClientTests.cs" />
+    <Compile Include="RepositoryClient\IssuesClientTests.cs" />
     <Compile Include="RepositoryClient\ProjectHooksClientTests.cs" />
     <Compile Include="RepositoryClient\RepositoryClientTests.cs" />
     <Compile Include="RepositoryClient\_RepositoryClientTests.cs" />
