Finish issue client. Add test for issue clients. Add upsert for issue create and update.

--- a/NGitLab/NGitLab/NGitLab.csproj
+++ b/NGitLab/NGitLab/NGitLab.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\Issue.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\IssueUpsert.cs" />
     <Compile Include="Models\MergeRequest.cs" />
     <Compile Include="Models\MergeRequestState.cs" />
     <Compile Include="Models\Milestone.cs" />
