Add test for all and create method of milestone client. Fix issue with simple json by added new formatter for time parse exact.

--- a/NGitLab/NGitLab.Tests/NGitLab.Tests.csproj
+++ b/NGitLab/NGitLab.Tests/NGitLab.Tests.csproj
@@ -46,6 +46,7 @@
     <Compile Include="RepositoryClient\BranchClientTests.cs" />
     <Compile Include="RepositoryClient\FilesClientTests.cs" />
     <Compile Include="RepositoryClient\IssuesClientTests.cs" />
+    <Compile Include="RepositoryClient\MilestoneClientTests.cs" />
     <Compile Include="RepositoryClient\ProjectHooksClientTests.cs" />
     <Compile Include="RepositoryClient\RepositoryClientTests.cs" />
     <Compile Include="RepositoryClient\_RepositoryClientTests.cs" />
